--- a/src/style.css
+++ b/src/style.css
@@ -92,6 +92,7 @@ h3 {
 
 .label {
   font-size: 0.9rem;
+  font-weight: normal;
 }
 
 .cases {
@@ -185,7 +186,7 @@ span.symbol {
   line-height: 0px;
 }
 
-[data-running-animation] .not-animatable {
+[data-historic-data] .not-animatable {
   opacity: 0.2;
   pointer-events: none;
 }
@@ -249,7 +250,7 @@ aside.info-overlay .close-icon {
  */
 
 section.map-section {
-  grid-row: 1 / 4;
+  grid-row: 1 / 3;
   grid-column: 2;
   display: flex;
   flex-direction: column;
@@ -348,6 +349,49 @@ section.map-section .city-label {
   opacity: 0.8;
   font-size: 0.8rem;
   line-height: 0.8rem;
+}
+
+/*
+ * Animation control section
+ */
+
+section.animation-control {
+  grid-column: 2;
+  grid-row: 3;
+}
+
+.animation-control-start, .animation-control-stop {
+  flex-basis: 150px;
+  flex-grow: 0;
+  flex-shrink: 1;
+}
+
+[data-running-animation] .animation-controls-row button {
+  pointer-events: none;
+  opacity: 0.4;
+}
+
+[data-running-animation] .animation-controls-row .animation-control-start, .animation-control-stop {
+  display: none;
+}
+
+[data-running-animation] .animation-controls-row .animation-control-stop {
+  display: inline;
+  pointer-events: all;
+  opacity: 1;
+}
+
+section.animation-control .animation-controls-row {
+  display: flex;
+}
+
+section.animation-control .animation-controls-row .spacer {
+  flex: 1;
+  display: inline-block;
+}
+
+section.animation-control .animation-controls-row input {
+  flex: 7;
 }
 
 /*
