Increase contrast of gray font

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 :root {
   --highlight-cyan: #00c5ff;
   --highlight-blue: #2f52a0;
-  --highlight-grey: #5c5c5c;
+  --highlight-grey: #999;
   --highlight-orange: #e69800;
   --background-darkest: #050505;
   --background-darker: #222222;
