--- a/src/style.css
+++ b/src/style.css
@@ -351,13 +351,16 @@ section.map-section .city-label {
   color: #eee;
   font-weight: bold;
   text-align: center;
-  text-shadow: 0px 0px 6px var(--background-darkest);
   display: flex;
   justify-content: center;
   align-items: center;
   opacity: 0.8;
   font-size: 0.8rem;
   line-height: 0.8rem;
+  text-shadow: -1px -1px 2px var(--background-dark),
+   1px -1px 2px var(--background-dark),
+   -1px 1px 2px var(--background-dark),
+   1px 1px 2px var(--background-dark);
 }
 
 /*
